--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,11 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-data-table-component": "^7.6.2",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "styled-components": "^6.1.11"
   }
 }
