--- a/client/package.json
+++ b/client/package.json
@@ -16,14 +16,14 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
-    "lodash": "^4.17.21",
+    "chart.js": "^4.4.3",
     "primereact": "^10.6.6",
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-router-dom": "^6.23.1",
     "react-virtualized": "^9.22.5",
-    "styled-components": "^6.1.11",
-    "use-debounce": "^10.0.1"
+    "styled-components": "^6.1.11"
   }
 }
