--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^4.4.3",
     "primereact": "^10.6.6",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
