--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "source": "/src/index.html",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build"
+    "build": "parcel build && npm install"
   },
   "keywords": [],
   "author": "",
